app router refactoring

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,8 @@
             "@store/*": ["src/store/*"],
             "@localization/*": ["src/localization/*"],
             "@api/*": ["src/api/*"],
-            "@utils/*": ["src/utils/*"]
+            "@utils/*": ["src/utils/*"],
+            "@navigation/*": ["src/navigation/*"]
         }
     },
     "exclude": ["node_modules"]
