--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-native-permissions": "^3.6.1",
         "react-native-toast-message": "^2.1.5",
         "react-native-url-polyfill": "^1.3.0",
+        "react-native-vector-icons": "^9.2.0",
         "react-redux": "^8.0.5"
     },
     "devDependencies": {
