--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-native-gesture-handler": "^2.8.0",
         "react-native-paper": "^5.1.2",
         "react-native-permissions": "^3.6.1",
+        "react-native-safe-area-context": "^4.4.1",
         "react-native-toast-message": "^2.1.5",
         "react-native-url-polyfill": "^1.3.0",
         "react-native-vector-icons": "^9.2.0",
