--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "react-native-toast-message": "^2.1.5",
         "react-native-url-polyfill": "^1.3.0",
         "react-native-vector-icons": "^9.2.0",
-        "react-redux": "^8.0.5"
+        "react-redux": "^8.0.5",
+        "redux-persist": "^6.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
