--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "jwt-decode": "^3.1.2",
         "moment": "^2.29.4",
         "nanoid": "^4.0.0",
-        "node-uuid": "^1.4.8",
         "react": "18.1.0",
         "react-i18next": "^12.1.1",
         "react-native": "0.70.5",
@@ -35,6 +34,7 @@
         "react-native-countdown-component": "^2.7.1",
         "react-native-error-boundary": "^1.1.17",
         "react-native-gesture-handler": "^2.8.0",
+        "react-native-get-random-values": "^1.8.0",
         "react-native-paper": "^5.1.2",
         "react-native-permissions": "^3.6.1",
         "react-native-safe-area-context": "^4.4.1",
@@ -42,7 +42,9 @@
         "react-native-url-polyfill": "^1.3.0",
         "react-native-vector-icons": "^9.2.0",
         "react-redux": "^8.0.5",
-        "redux-persist": "^6.0.0"
+        "redux-persist": "^6.0.0",
+        "util": "^0.12.5",
+        "uuidv4": "^6.2.13"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
