--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
         "react-redux": "^8.0.5",
         "redux-persist": "^6.0.0",
         "util": "^0.12.5",
-        "uuidv4": "^6.2.13"
+        "uuidv4": "^6.2.13",
+        "@expo/vector-icons": "^13.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
