--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "eject": "expo eject"
     },
     "dependencies": {
+        "@expo/vector-icons": "^13.0.0",
         "@react-native-async-storage/async-storage": "^1.17.11",
         "@react-native-community/netinfo": "^9.3.7",
+        "@react-navigation/material-bottom-tabs": "^6.2.10",
         "@react-navigation/native-stack": "^6.9.7",
         "@reduxjs/toolkit": "^1.9.1",
         "axios": "^1.2.2",
@@ -44,13 +46,12 @@
         "react-redux": "^8.0.5",
         "redux-persist": "^6.0.0",
         "util": "^0.12.5",
-        "uuidv4": "^6.2.13",
-        "@expo/vector-icons": "^13.0.0"
+        "uuidv4": "^6.2.13"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
         "@expo/vector-icons": "^12.0.5",
-        "@react-navigation/bottom-tabs": "^6.1.0",
+        "@react-navigation/bottom-tabs": "^6.5.2",
         "@react-navigation/native": "^6.0.7"
     },
     "private": true
