--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
         "splash": {
             "image": "./assets/splash.png",
             "resizeMode": "contain",
-            "backgroundColor": "#ffffff"
+            "backgroundColor": "#a2acea"
         },
         "updates": {
             "fallbackToCacheTimeout": 0
