clear all data feature added

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "expo": {
-        "name": "projectzero-mobile",
+        "name": "ProjectZero Mobile",
         "slug": "projectzero-mobile",
         "version": "0.1.0",
         "orientation": "portrait",
