--- a/package.json
+++ b/package.json
@@ -1,58 +1,60 @@
 {
-    "name": "projectzero-mobile",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "eject": "expo eject"
-    },
-    "dependencies": {
-        "@expo/vector-icons": "^13.0.0",
-        "@react-native-async-storage/async-storage": "^1.17.11",
-        "@react-native-community/netinfo": "^9.3.7",
-        "@react-navigation/material-bottom-tabs": "^6.2.10",
-        "@react-navigation/native-stack": "^6.9.7",
-        "@reduxjs/toolkit": "^1.9.1",
-        "axios": "^1.2.2",
-        "expo": "^47.0.10",
-        "expo-background-fetch": "^11.0.1",
-        "expo-linking": "^3.3.0",
-        "expo-location": "^15.0.1",
-        "expo-status-bar": "^1.4.2",
-        "expo-task-manager": "^11.0.1",
-        "i18next": "^22.4.8",
-        "jwt-decode": "^3.1.2",
-        "moment": "^2.29.4",
-        "nanoid": "^4.0.0",
-        "react": "18.1.0",
-        "react-i18next": "^12.1.1",
-        "react-native": "0.70.5",
-        "react-native-background-actions": "^3.0.0",
-        "react-native-background-timer": "^2.4.1",
-        "react-native-base64": "^0.2.1",
-        "react-native-countdown-component": "^2.7.1",
-        "react-native-error-boundary": "^1.1.17",
-        "react-native-gesture-handler": "^2.8.0",
-        "react-native-get-random-values": "^1.8.0",
-        "react-native-paper": "^5.1.2",
-        "react-native-permissions": "^3.6.1",
-        "react-native-safe-area-context": "^4.4.1",
-        "react-native-toast-message": "^2.1.5",
-        "react-native-url-polyfill": "^1.3.0",
-        "react-native-vector-icons": "^9.2.0",
-        "react-redux": "^8.0.5",
-        "redux-persist": "^6.0.0",
-        "util": "^0.12.5",
-        "uuidv4": "^6.2.13"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@expo/vector-icons": "^12.0.5",
-        "@react-navigation/bottom-tabs": "^6.5.2",
-        "@react-navigation/native": "^6.0.7"
-    },
-    "private": true
+  "name": "projectzero-mobile",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/netinfo": "^9.3.7",
+    "@react-navigation/material-bottom-tabs": "^6.2.10",
+    "@react-navigation/native-stack": "^6.9.7",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
+    "expo": "^47.0.10",
+    "expo-background-fetch": "^11.0.1",
+    "expo-linking": "^3.3.0",
+    "expo-location": "^15.0.1",
+    "expo-status-bar": "^1.4.2",
+    "expo-task-manager": "^11.0.1",
+    "i18next": "^22.4.8",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "nanoid": "^4.0.0",
+    "react": "18.1.0",
+    "react-i18next": "^12.1.1",
+    "react-native": "0.70.5",
+    "react-native-background-actions": "^3.0.0",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-base64": "^0.2.1",
+    "react-native-countdown-component": "^2.7.1",
+    "react-native-device-info": "^10.3.0",
+    "react-native-error-boundary": "^1.1.17",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-paper": "^5.1.2",
+    "react-native-permissions": "^3.6.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-url-polyfill": "^1.3.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
+    "util": "^0.12.5",
+    "uuidv4": "^6.2.13",
+    "expo-application": "~5.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@expo/vector-icons": "^12.0.5",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.0.7"
+  },
+  "private": true
 }
