--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "redux-persist": "^6.0.0",
     "util": "^0.12.5",
     "uuidv4": "^6.2.13",
-    "expo-application": "~5.0.1"
+    "expo-application": "~5.0.1",
+    "expo-sharing": "~11.0.1",
+    "expo-file-system": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
