--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "uuidv4": "^6.2.13",
     "expo-application": "~5.0.1",
     "expo-sharing": "~11.0.1",
-    "expo-file-system": "~15.1.1"
+    "expo-file-system": "~15.1.1",
+    "expo-document-picker": "~11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
