--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-navigation/material-bottom-tabs": "^6.2.10",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "expo": "^47.0.10",
+    "expo-application": "~5.0.1",
     "expo-background-fetch": "^11.0.1",
+    "expo-document-picker": "~11.0.1",
+    "expo-file-system": "~15.1.1",
     "expo-linking": "^3.3.0",
     "expo-location": "^15.0.1",
+    "expo-sharing": "~11.0.1",
     "expo-status-bar": "^1.4.2",
     "expo-task-manager": "^11.0.1",
     "i18next": "^22.4.8",
@@ -36,22 +41,20 @@
     "react-native-countdown-component": "^2.7.1",
     "react-native-device-info": "^10.3.0",
     "react-native-error-boundary": "^1.1.17",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "^5.1.2",
     "react-native-permissions": "^3.6.1",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "util": "^0.12.5",
-    "uuidv4": "^6.2.13",
-    "expo-application": "~5.0.1",
-    "expo-sharing": "~11.0.1",
-    "expo-file-system": "~15.1.1",
-    "expo-document-picker": "~11.0.1"
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
