--- a/package.json
+++ b/package.json
@@ -10,58 +10,58 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/ngrok": "^4.1.1",
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@expo/ngrok": "^4.1.3",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^9.3.7",
-    "@react-navigation/material-bottom-tabs": "^6.2.10",
-    "@react-navigation/native-stack": "^6.9.7",
-    "@reduxjs/toolkit": "^1.9.1",
-    "axios": "^1.2.2",
-    "expo": "^47.0.10",
-    "expo-application": "~5.0.1",
-    "expo-background-fetch": "^11.0.1",
-    "expo-document-picker": "~11.0.1",
-    "expo-file-system": "~15.1.1",
-    "expo-linking": "^3.3.0",
-    "expo-location": "^15.0.1",
-    "expo-sharing": "~11.0.1",
-    "expo-status-bar": "^1.4.2",
-    "expo-task-manager": "^11.0.1",
-    "i18next": "^22.4.8",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.8",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "expo-application": "~5.9.1",
+    "expo-background-fetch": "~12.0.1",
+    "expo-document-picker": "~12.0.1",
+    "expo-file-system": "~17.0.1",
+    "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
+    "expo-sharing": "~12.0.1",
+    "expo-status-bar": "~1.12.1",
+    "expo-task-manager": "~11.8.1",
+    "i18next": "^22.5.1",
     "jwt-decode": "^3.1.2",
-    "moment": "^2.29.4",
-    "nanoid": "^4.0.0",
-    "react": "18.1.0",
-    "react-i18next": "^12.1.1",
-    "react-native": "0.70.5",
-    "react-native-background-actions": "^3.0.0",
+    "moment": "^2.30.1",
+    "nanoid": "^4.0.2",
+    "react": "18.2.0",
+    "react-i18next": "^12.3.1",
+    "react-native": "0.74.1",
+    "react-native-background-actions": "^3.0.1",
     "react-native-background-timer": "^2.4.1",
     "react-native-base64": "^0.2.1",
     "react-native-countdown-component": "^2.7.1",
-    "react-native-device-info": "^10.3.0",
-    "react-native-error-boundary": "^1.1.17",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-get-random-values": "^1.8.0",
-    "react-native-paper": "^5.1.2",
-    "react-native-permissions": "^3.6.1",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-toast-message": "^2.1.5",
+    "react-native-device-info": "^10.13.2",
+    "react-native-error-boundary": "^1.2.4",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^3.10.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
     "util": "^0.12.5",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@expo/vector-icons": "^12.0.5",
-    "@react-navigation/bottom-tabs": "^6.5.2",
-    "@react-navigation/native": "^6.0.7"
+    "@babel/core": "^7.24.5",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "expo": "^51.0.2"
   },
   "private": true
 }
